--- a/css/leon.css
+++ b/css/leon.css
@@ -155,7 +155,7 @@ body {
 
 /* start landing  */
 .landing {
-  background-image: url(/images/landing.jpg);
+  background-image: url(../images/landing.jpg);
   background-size: cover;
   height: calc(100Vh - 64px);
   position: relative;
